# sat_solver_ai

./: .gitignore  CMakeLists.txt  Makefile
include/: auth.h  cnf_parser.h  dpll_solver.h  visualizer.h
src/: auth.cpp  cnf_parser.cpp  dpll_solver.cpp  main.cpp  visualizer.cpp
test/: empty_clauses.cnf  example.cnf  hard_unsat.cnf  medium_sat.cnf  simple_sat.cnf  simple_unsat.cnf
